--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
                 <span class="absolute top-31 font-bold text-7xl text-black-800">
                     AI code editor
                 </span>
-                <button class="absolute top-60  flex items-center text-xl gap-3 px-6 py-3 w-80 bg-black text-white rounded-lg hover:bg-gray-900 font-medium cursor-pointer shadow-xl">
-                <img class="w-6 filter invert" src="/utils/windows-windows-svgrepo-com.svg" alt="Windows Icon" />
+                <button class="absolute top-60  flex items-center text-xl gap-3 pl-6 pr-6 py-3 w-80 bg-black text-white rounded-lg hover:bg-gray-900 font-medium cursor-pointer shadow-xl">
+                <img class="ml-4 w-6 filter invert" src="/utils/windows-windows-svgrepo-com.svg" alt="Windows Icon" />
                     Download for Windows
                 </button>
                 <p class="absolute top-78 text-[12px]">
