--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script> -->
-     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <title>Vs Code</title>
 </head>
 <body>
@@ -61,18 +60,27 @@
             </div>
         </main>
         <div class="mt-90 ml-35 grid grid-cols-3">
-          <div class="top-100 flex flex-col border-gray-300 w-80">
-                <p class="font-bold text-xl text-black-600">Any model for any team</p>
-                <p>Use AI models like Claude Sonnet out of the box, or bring your own key to access models from Azure, Anthropic, Google, Ollama, OpenAI, and OpenRouter.</p>
+          <div class="top-100 flex flex-col border-gray-300 border-1 pt-4 pb-4 pl-4 pr-4 w-80 bg-gray-100 rounded-md mt-7">
+                <p class="text-xl font-medium text-gray-800 pb-3">Any model for any team</p>
+                <p class="text-gray-600 pb-3">Use AI models like Claude Sonnet out of the box, or bring your own key to access models from Azure, Anthropic, Google, Ollama, OpenAI, and OpenRouter.</p>
+                <img src="utils\choose-model-light.webp">
             </div>
-            <div class="flex flex-col border-gray-300 w-80">
-                <p class="font-bold text-xl text-black-600">An expert on your codebase</p>
-                <p>Your codebase is indexed locally and remotely (on GitHub) to understand what's relevant, enabling fast, context-aware interactions.</p>
+            <div class="flex flex-col border-gray-300 w-80 border-1 pt-4 pb-4 pl-4 pr-4 w-80 bg-gray-100 rounded-md mt-7">
+                <p class="text-xl font-medium text-gray-800 pb-3">An expert on your codebase</p>
+                <p class="text-gray-600 pb-3">Your codebase is indexed locally and remotely (on GitHub) to understand what's relevant, enabling fast, context-aware interactions.</p>
+                <img src="utils\an-expert-on-your-codebase-light.webp">
             </div>
-            <div class="flex flex-col border-gray-300 w-80">
-               <p class="font-bold text-xl text-black-600">AI that works the way your team does</p>
-                <p>Personalize interactions using custom instructions and reusable prompt files tailored to your workflows, tools, and projects.</p> 
+            <div class="flex flex-col border-gray-300 w-80 border-1 pt-4 pb-4 pl-4 pr-4 w-80 bg-gray-100 rounded-md mt-7">
+               <p class="text-xl font-medium text-gray-800 pb-3">AI that works the way your team does</p>
+                <p class="text-gray-600 pb-3">Personalize interactions using custom instructions and reusable prompt files tailored to your workflows, tools, and projects.</p> 
+                <img src="utils\instructions-light.webp">
             </div>  
+        </div>
+        <div class="mt-15 ml-35 flex flex-cols-3 border-1 pt-10 pb-10 pl-10 pr-10 w-283 bg-gray-100 rounded-lg mt-7">
+            <p class="text-3xl text-black-800 pt-4">Use AI features in VS Code for free</p>
+            <p class="pl-25 pt-6">No trial. No credit card required. Just your GitHub account.
+                <button class="flex border-1 text-black-600 border-gray-400 rounded-md bg-gray-200 pt-1 pb-1 pl-4 pr-4 mt-2">Try free</button>
+            </p><br>
         </div>
     </div>
 </body>
