--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@
             <img src="utils\swimlane-nes-light.webp" class="pl-20 w-280 h-130">
         </div>
         <div class="flex flex-cols-2 mt-15 ml-35 flex-cols-3 pt-8 pb-8 pl-1 pr-1 w-283 mt-7">
-            <div class="w-1/4 mr-20 mt-8">
+            <div class="w-80 mr-20 mt-8">
             <p class="pt-30 text-3xl font-semibold pb-3 pr-30 whitespace-nowrap">Code with extensions</p>
-            <p class="font-medium text-medium text-gray-600 mb-3">Customize VS Code with AI-powered functionality from extensions and Model Context Protocol servers to use in Chat. Or, build your own extension to power your team's unique scenarios.</p>
+            <p class="font-medium text-medium text-gray-600 mb-3 whitespace-pre-line">Customize VS Code with AI-powered functionality from extensions and Model Context Protocol servers to use in Chat. Or, build your own extension to power your team's unique scenarios.</p>
             </div>
             <div class="grid grid-cols-3 ">
                 <div class="bg-gray-50 flex border-1 border-gray-400 p-2 mr-2 mb-1 text-xs rounded-md pl-4 pt-4 pb-4 pr-4">
@@ -191,47 +191,139 @@
                         <a href="" class="text-blue-700 font-medium underline">Extension Marketplace</a></span>
                     </p>
                 </div>
-                <!-- <div class="border-1 border-gray-400">
-                    Stripe extension icon<br>
-                    Stripe<br>
-                    Build, test, and use Stripe inside your editor<br>
-                </div>
-                <div>
-                    C/C extension icon<br>
-                    C/C++<br>
-                    Adds rich language support for C/C++<br>
-                </div>
-                <div class="border-1 border-gray-400">        
-                    Jupyter extension icon<br>
-                    Jupyter<br>
-                    Language support for Jupyter Notebooks<br>
-                </div>
-                <div class="border-1 border-gray-400">
-                    GitLens extension icon<br>  
-                    GitLens<br>
-                    Supercharge your Git experience<br>
-                </div>
-                <div class="border-1 border-gray-400">
-                    C# Dev Kit extension icon<br>
-                    C# Dev Kit<br>
-                    Powerful tools for your C# environment<br>
-                </div>
-                <div class="border-1 border-gray-400">
-                    MongoDB extension icon<br>
-                    MongoDB<br>
-                    Extension for the @MongoDB agent<br>
-                </div>
-                <div class="border-1 border-gray-400">
-                    GitHub Copilot for Azure extension icon<br>
-                    GitHub Copilot for Azure<br>
-                    Streamline the process of developing for Azure<br>
-                </div>
-                <div class="border-1 border-gray-400">
-                    Remote Development extension icon<br>
-                    Remote Development<br>
-                    Open folders in a container on a remote machine<br>
-                </div> -->
             </div>
+        </div>
+        <div class="flex flex-cols-2 mt-15 ml-35 pt-8 pb-8 pl-1 pr-1 w-283 mt-7">
+            <div class="w-1/3 mr-10 mt-1 pr-15">
+                <p class="pt-1 text-3xl font-semibold pb-3 pr-30 whitespace-nowrap">Code in any language</p>
+                <p class="font-medium text-medium text-gray-600 mb-3 whitespace-pre-line">VS Code supports almost every major programming language. Several ship in the box, like JavaScript, TypeScript, CSS, and HTML, but extensions for others can be found in the VS Code Marketplace.</p>
+            </div>
+            <div class="grid grid-cols-3 pt-6">
+                <div class="flex border-none mr-20 mb-4 text-xs pl-1 pr-3 mb-5">
+                    <div>
+                        <img src="utils\language-js.png" class="w-15 pr-6 pt-0">
+                    </div>
+                    <div>
+                        <p class="text-medium text-black-800 font-normal text-base pt-1 pb-1">JavaScript</p>
+                    </div>
+                </div>
+                <div class="flex border-none mr-20 mb-4 text-xs pl-1 pr-3 mb-5">
+                    <div>
+                        <img src="utils\language-ts.png" class="w-15 pr-6 pt-0">
+                    </div>
+                    <div>
+                        <p class="text-medium text-black-800 font-normal text-base pt-1 pb-1">TypeScript</p>
+                    </div>
+                </div>
+                <div class="flex border-none mr-20 mb-4 text-xs pl-1 pr-3 mb-5">
+                    <div>
+                        <img src="utils\language-python.png" class="w-15 pr-6 pt-0">
+                    </div>
+                    <div>
+                        <p class="text-medium text-black-800 font-normal text-base pt-1 pb-1">Python
+                    </div>
+                </div>
+                <div class="flex border-none mr-20 mb-4 text-xs pl-1 pr-1 mb-5">
+                    <div>
+                        <img src="utils\language-cs.png" class="w-15 pr-6 pt-0">
+                    </div>
+                    <div>
+                        <p class="text-medium text-black-800 font-normal text-base pt-1 pb-1">C#</p>
+                    </div>
+                </div>
+                <div class="flex border-none mr-20 mb-4 text-xs pl-1 pr-1 mb-5">
+                    <div>
+                        <img src="utils\language-cpp.png" class="w-15 pr-6 pt-0">
+                    </div>
+                    <div>
+                        <p class="text-medium text-black-800 font-normal text-base pt-1 pb-1">C++</p>
+                    </div>
+                </div>
+                <div class="flex border-none mr-20 mb-4 text-xs pl-1 pr-1 mb-5">
+                    <div>
+                        <img src="utils\language-html.png" class="w-15 pr-6 pt-0">
+                    </div>
+                    <div>
+                        <p class="text-medium text-black-800 font-normal text-base pt-1 pb-1">HTML</p>
+                    </div>
+                </div>
+                <div class="flex border-none mr-20 mb-4 text-xs pl-1 pr-1">
+                    <div>
+                        <img src="utils\language-java.png" class="w-15 pr-6 pt-0">
+                    </div>
+                    <div>
+                        <p class="text-medium text-black-800 font-normal text-base pt-1 pb-1">Java</p>
+                    </div>
+                </div>
+                <div class="flex border-none mr-20 mb-4 text-xs pl-1 pr-1">
+                    <div>
+                        <img src="utils\language-json.png" class="w-15 pr-6 pt-0">
+                    </div>
+                    <div>
+                        <p class="text-medium text-black-800 font-normal text-base pt-1 pb-1">JSON</p>
+                    </div>
+                </div>
+                <div class="flex border-none mr-20 mb-4 text-xs rounded-md pl-2  pr-2">
+                    <div>
+                        <img src="utils\language-php.png" class="w-15 pr-6 pt-0">
+                    </div>
+                    <div>
+                        <p class="text-medium text-black-800 font-normal text-base pt-2 pb-2">PHP</p>
+                    </div>
+                </div>
+                <div class="flex border-none mr-20 text-xs pl-1 pr-3 mb-5">
+                    <div>
+                        <img src="utils\language-markdown.png" class="w-15 pr-6 pt-0">
+                    </div>
+                    <div>
+                        <p class="text-medium text-black-800 font-normal text-base pt-1 pb-1">Markdown</p>
+                    </div>
+                </div>
+                <div class="flex border-none mr-20 text-xs pl-1 pr-3 mb-5">
+                    <div>
+                        <img src="utils\language-powershell.png" class="w-15 pr-6 pt-0">
+                    </div>
+                    <div>
+                        <p class="text-medium text-black-800 font-normal text-base pt-1 pb-1">Powershell</p>
+                    </div>
+                </div>
+                <div class="flex border-none mr-20 text-xs pl-1 pr-3 mb-5">
+                    <div>
+                        <img src="utils\language-yaml.png" class="w-15 pr-6 pt-0">
+                    </div>
+                    <div>
+                        <p class="text-medium text-black-800 font-normal text-base pt-1 pb-1">YAML</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="flex mt-15 ml-35 flex-cols-3 pt-8 pb-8 pl-1 pr-1 w-283 mt-7">
+            <div>
+            <p class="pt-30 text-3xl font-semibold mb-3">Fully customizable</p>
+            <p class="font-medium text-lg text-gray-600 mb-3">Customize your VS Code UI and layout so that it fits your coding style.
+
+Color themes let you modify the colors in VS Code's user interface to suit your preferences and work environment.
+
+Settings Sync enables you to share your user settings across your VS Code instances with the Settings Sync feature.
+
+Profiles let you create sets of customizations and quickly switch between them or share them with others.</p>
+            <p class="text-blue-700 font-medium underline">Code with AI-powered suggestions</p>
+            </div>
+            <img src="utils\swimlane-customized-light.png" class="pl-20 w-280 h-130">
+        </div>
+        <div class="flex mt-15 ml-35 flex-cols-3 pt-8 pb-8 pl-1 pr-1 w-283 mt-7">
+            <div>
+            <p class="pt-0 text-3xl font-semibold mb-3">Code anywhere</p>
+            <p class="font-medium text-medium text-gray-600 mb-3 pr-8">Code wherever you're most productive, whether you're connected to the cloud, a remote repository, or in the browser with VS Code for the Web (vscode.dev).<br>
+                <br>
+                <br>
+Built-in Source Control empowers you with Git support out-of-the-box. Many other source control providers are available through extensions.
+                <br>
+                <br>
+                <br>
+GitHub Codespaces provides cloud-powered development environments for any activity - whether it's a long-term project, or a short-term task like reviewing a pull request.</p>
+            </div>
+            <img src="utils\swimlane-anywhere-light.png" class="pl-20 w-250 h-100 pt-5">
         </div>
     </div>
 </body>
